overlaps fixed

--- a/site/calendar.css
+++ b/site/calendar.css
@@ -58,11 +58,13 @@ th {
 }
 
 .day{
-  display: -webkit-flex;
+    
+  display: -webkit-flex; 
   display: flex;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  width: 100%;
+ -webkit-flex-direction: column;
+  flex-direction: column; 
+  flex-wrap: wrap;
+	width: 100%; 
   height: 100%;
   background-color: #666;
   color: black;
@@ -86,7 +88,6 @@ th {
    z-index:4;
    /*width: 100% !important;*/
    transform:scale(2,2);
-   transition: .1s all;
 }
 .event:hover > .edit {
   height:50%;
@@ -94,13 +95,12 @@ th {
 }
 
 .event {
+	float: left;
 	background-color: #067FE3;
-	/*float: left;*/
   word-break: break-word;
   outline: 2px groove black;
   overflow: hidden;
   font-family: sans-serif;
-  width: 100%;
   z-index: 0;
   }
 
